--- a/bookreview/bookreview/bookreview.csproj
+++ b/bookreview/bookreview/bookreview.csproj
@@ -216,6 +216,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BaseModels\Author.cs" />
+    <Compile Include="Models\BaseModels\Book.cs" />
+    <Compile Include="Models\BaseModels\Category.cs" />
+    <Compile Include="Models\BaseModels\Rate.cs" />
+    <Compile Include="Models\BaseModels\Review.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
