--- a/bookreview/bookreview.Tests/bookreview.Tests.csproj
+++ b/bookreview/bookreview.Tests/bookreview.Tests.csproj
@@ -86,8 +86,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AuthorTests.cs" />
+    <Compile Include="Models\BookTests.cs" />
+    <Compile Include="Models\CategoryTests.cs" />
+    <Compile Include="Models\RateTests.cs" />
+    <Compile Include="Models\ReviewTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -100,6 +104,9 @@
       <Project>{733E7CB0-EAA9-462B-99DA-22306BFE60CD}</Project>
       <Name>bookreview</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
